# wbwwb

./: .gitignore  README.md  index.html
js/: textStrings.js
js/core/: Game.js
js/game/: Camera.js
js/scenes/: Scene_Meta.js  Scene_Preloader.js
native/: CMakeLists.txt  PORTING.md  THIRD_PARTY_NOTICES.md  build-win32.bat
native/assets/lang/: de.json  en.json  pt-BR.json  tr.json
native/assets/shaders/: postprocess.fs
native/assets/shaders/vulkan/: fsr1_easu.frag  fsr1_rcas.frag  present2d.frag  solid2d.vert  textured2d.frag  textured2d.vert
native/cmake/: WBWWB_VulkanBackend.cmake
native/resources/: resource.h  wbwwb.rc  wbwwb_native.desktop
native/src/: AppWindow.h  AssetManager.cpp  AssetManager.h  AudioBackend.h  AudioManager.cpp  AudioManager.h  CaptureService.h  Constants.h  FramePipeline.h  Game.cpp  Game.h  Gameplay.cpp  InputProvider.h  Localization.cpp  Localization.h  Scene.cpp  Scene.h  Scenes.cpp  Scenes.h  Settings.cpp  Settings.h  Text.h  Tween.cpp  Tween.h  WindowIcon.cpp  WindowIcon.h  main.cpp
native/src/compat/: RaylibCompat.cpp  RaylibCompat.h
native/src/render/: NullAudioBackend.cpp  NullAudioBackend.h  README.md  RenderBackend.cpp  RenderBackend.h  Renderer.h
native/src/render/miniaudio/: MiniaudioAudioBackend.cpp  MiniaudioAudioBackend.h
native/src/render/raylib/: README.md  RaylibAppWindow.cpp  RaylibAppWindow.h  RaylibAudioBackend.cpp  RaylibAudioBackend.h  RaylibCaptureService.cpp  RaylibCaptureService.h  RaylibFramePipeline.cpp  RaylibFramePipeline.h  RaylibGame.cpp  RaylibInputProvider.cpp  RaylibInputProvider.h  RaylibRenderer.cpp  RaylibRenderer.h
native/src/render/vulkan/: README.md  VulkanAppWindow.cpp  VulkanAppWindow.h  VulkanBackend.cpp  VulkanBackend.h  VulkanCaptureService.cpp  VulkanCaptureService.h  VulkanCommandContext.cpp  VulkanCommandContext.h  VulkanDebug.cpp  VulkanDebug.h  VulkanDevice.cpp  VulkanDevice.h  VulkanErrors.cpp  VulkanErrors.h  VulkanFont.cpp  VulkanFont.h  VulkanFramePipeline.cpp  VulkanFramePipeline.h  VulkanFramebuffers.cpp  VulkanFramebuffers.h  VulkanHDR.cpp  VulkanHDR.h  VulkanImageLoader.cpp  VulkanImageLoader.h  VulkanInputProvider.cpp  VulkanInputProvider.h  VulkanInstance.cpp  VulkanInstance.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanRenderTarget.cpp  VulkanRenderTarget.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanRenderer2D.cpp  VulkanRenderer2D.h  VulkanShaderModule.cpp  (+11 more)
scripts/: validate-assets.mjs
sprites/misc/: candlelight.json  candlelight@2x.json  cricket.json  cricket@2x.json  cursor.json  cursor@2x.json  lovers_watching.json  lovers_watching@2x.json  preload_play.json  preload_play@2x.json
sprites/peeps/: blood.json  blood@2x.json  blood_test.json  blood_test@2x.json  body.json  body@2x.json  body_red.json  body_red@2x.json  face.json  face@2x.json  face_angry.json  face_angry@2x.json  face_murder.json  face_murder@2x.json  face_nervous.json  face_nervous@2x.json  face_snobby.json  face_snobby@2x.json  face_snobby_hmph.json  face_snobby_hmph@2x.json  gore.json  gore@2x.json  gore_bodies.json  gore_bodies@2x.json  gun.json  gun@2x.json  hangry.json  hangry@2x.json  happy_weirdo.json  happy_weirdo@2x.json  hat.json  hat@2x.json  hatguy.json  hatguy@2x.json  helping.json  helping@2x.json  lovehat.json  lovehat@2x.json  lover_panic.json  lover_panic@2x.json  (+12 more)
sprites/postcredits/: end_button.json  end_button@2x.json
translations/: README.md  template.json
